src/objects/Solucion__c.object
<CustomObject>
    <fields>
        <fullName>Comentarios__c</fullName>
        <label>Comentarios</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estado__c</fullName>
        <label>Estado</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F1 - Ganada</fullName>
                </value>
                <value>
                    <fullName>F1 - Perdida</fullName>
                </value>
                <value>
                    <fullName>F2 - Negociación</fullName>
                </value>
                <value>
                    <fullName>F3 - Presentacion de la Oferta</fullName>
                </value>
                <value>
                    <fullName>F4 - Desarrollo de la Oferta</fullName>
                </value>
                <value>
                    <fullName>F5 - Definición de la Solución</fullName>
                </value>
                <value>
                    <fullName>F6 - Preoportunidad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCV__c</fullName>
        <label>FCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_Fin_Contrato__c</fullName>
        <label>Fecha Fin Contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Inicio_Contrato__c</fullName>
        <label>Fecha Inicio Contrato</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Linea_de_Servicio__c</fullName>
        <label>Linea de Servicio</label>
        <referenceTo>Linea_de_Servicio__c</referenceTo>
        <relationshipLabel>Soluciones</relationshipLabel>
        <relationshipName>Soluciones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proveedor__c</fullName>
        <label>Proveedor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FourPlanning Reto</label>
        <referenceTo>FourPlanning_Reto__c</referenceTo>
        <relationshipLabel>Soluciones</relationshipLabel>
        <relationshipName>Soluciones</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Solucion</label>
    <nameField>
        <label>Nombre de Solucion</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Soluciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>